tests/NormalTests/paczka1/fuzzy1/83359604.err
Error in line 1: R2n3trDAy A108 14,4
Error in line 7: R2n3trDAy S575 14,8
Error in line 15: R2n3trDAy S616 16,9
Error in line 16: R2n3trDAy S788 73,6
Error in line 18: wQlz3p5 S788 32,6
Error in line 19: R2n3trDAy S575 65,9
Error in line 21: R2n3trDAy A108 68,0
Error in line 27: Ik9K5QGoF S788 32,0
Error in line 26: PtMiyxvl S616 15,3
